# amplrs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  docs.yml
dev/: download-ampl.sh
docs/source/: class-structure.rst  conf.py  examples.rst  getting-started.rst  index.rst  intro.rst  quick-start.rst  reference.rst
docs/source/classes/: ampl.rst  constraint.rst  dataframe.rst  environment.rst  objective.rst  parameter.rst  set.rst  suffix.rst  variable.rst  variant.rst
examples/: dietexample.rs  firstexample.rs  trackingmodel.rs
src/: ampl.rs  dataframe.rs  environment.rs  parameter.rs  variableinstance.rs  variant.rs
tests/: ampl.rs  constraint.rs  dataframe.rs  entities.rs  environment.rs  options.rs  parameter.rs  set.rs  variable.rs  variant.rs
