[package]
name = "amplrs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust API for AMPL optimization modeling system"
license = "MIT"
repository = "https://github.com/jurgen-lentz/amplrs"
readme = "README.md"
keywords = ["ampl", "optimization", "ffi", "linear-programming"]
categories = ["api-bindings"]
links = "ampl"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71"
